IgorTheLight - 1.5.3 to 1.6,  1.7 to 2.0.3,  2.0.4,  2.1.0,  2.1.1,  2.1.3,  2.1.6,  2.1.8,  2.2.0,  2.2.1,  2.3.0.0, 2.3.2.0
BlueAmulet - 2.1.7

## Version 2.3.2.0

- Fixed unnecessary cast in method that searches for videodrivers. That may fix some rare issues with videocard detection
- Sealed two classes for performance gain
- Changed StringBuilder + File.WriteAllText to a simple and more efficient StreamWriter
- Created new class - "extensions" and refactored GetValueFromLine() method to an extension
- Renamed a few variables here and there

## Version 2.3.1.0

- Changed the Open Folder button to open the referenced Mod folder of the module instead of the path based on filename of the module. It should always open a folder now if it exists.

## Version 2.3.0.0

- Added a Font Manager. Now you can add new fonts, and change fonts sizes for different UI elements!
- Some small code improvements

## Version 2.2.2

- Improved the Layout of the current active game directory label and textbox.
- Added a new button that allows to open the currently selected mod in a new windows explorer window, if it exists.

## Version 2.2.1

- Fixed a crash when there is no line 15 in spdx9_config.txt file in Drivers folder (thanks,  SergeantDiggs)
- WriteSettings() method in SettingManagerForm is more efficient now -allowhwcursor it uses StreamWriter instead of StringBuilder( + File.WriteAllLines())

## Version 2.2.0

- Added ability to download mods using MiniBrowser - an Internet Explorer 11 engine wrapped in a WebBrowser object in .NET Framework
- Fixed a bug where instead of a patch,  ModMownloaderForm would still download the mod itself
- Fixed a bug where you click on a non-existent item in RequiredMods Mods when you have no mods installed
- Version checking is more reliable now (version number could be > 9 now,  for example 2.1.10)